Closed
Bug 1913773
Opened 1 year ago
Closed 1 year ago
Crash in [@ mozilla::ipc::SharedMemory::Size]
Categories
(Core :: Graphics: Canvas2D, defect)
Core
Graphics: Canvas2D
Tracking
()
RESOLVED
FIXED
131 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox-esr128 | --- | wontfix |
| firefox129 | --- | wontfix |
| firefox130 | --- | wontfix |
| firefox131 | --- | fixed |
People
(Reporter: gsvelto, Assigned: lsalzman)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
Crash report: https://crash-stats.mozilla.org/report/index/a9bb0b1f-66cc-4a72-a13a-0a1d00240817
Reason: SIGSEGV / SEGV_MAPERR
Top 10 frames:
0 libxul.so mozilla::ipc::SharedMemory::Size() const ipc/glue/SharedMemory.h:35
0 libxul.so mozilla::layers::CanvasTranslator::CanvasShmem::Size() gfx/layers/ipc/CanvasTranslator.h:447
0 libxul.so mozilla::layers::CanvasTranslator::AddBuffer(mozilla::UniquePtr<int, mozilla:... gfx/layers/ipc/CanvasTranslator.cpp:299
1 libxul.so mozilla::layers::CanvasTranslator::HandleCanvasTranslatorEvents() gfx/layers/ipc/CanvasTranslator.cpp:754
2 libxul.so mozilla::detail::RunnableMethodArguments<>::apply<nsObserverService, void (ns... xpcom/threads/nsThreadUtils.h:1085
2 libxul.so std::__invoke_impl<void, mozilla::detail::RunnableMethodArguments<>::apply<ns... /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/c++/8/bits/invoke.h:60
2 libxul.so std::__invoke<mozilla::detail::RunnableMethodArguments<>::apply<nsObserverSer... /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/c++/8/bits/invoke.h:95
2 libxul.so _ZSt12__apply_implIZN7mozilla6detail23RunnableMethodArgumentsIJEE5applyI17nsO... /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/c++/8/tuple:1678
2 libxul.so std::apply<mozilla::detail::RunnableMethodArguments<>::apply<nsObserverServic... /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/c++/8/tuple:1687
2 libxul.so mozilla::detail::RunnableMethodArguments<>::apply<nsObserverService, void (ns... xpcom/threads/nsThreadUtils.h:1083
Very low volume, but seems like a valid bug. It appears that shmem is null, I'm not sure how that happens, but all these crashes appear to happen on machines with Nvidia cards.
| Reporter | ||
Comment 1•1 year ago
|
||
My bad, this also seems to happen on Android devices. On the latter this is a GPU crash though, on Linux it's a parent process crash.
| Assignee | ||
Updated•1 year ago
|
Severity: -- → S3
Component: Graphics → Graphics: Canvas2D
| Assignee | ||
Comment 2•1 year ago
|
||
Updated•1 year ago
|
Assignee: nobody → lsalzman
Status: NEW → ASSIGNED
Pushed by lsalzman@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b62942faef2f
Ensure mCurrentShmem is valid. r=aosmond
Comment 4•1 year ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
status-firefox131:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 131 Branch
Updated•1 year ago
|
status-firefox129:
--- → wontfix
status-firefox130:
--- → affected
status-firefox-esr115:
--- → unaffected
status-firefox-esr128:
--- → affected
Keywords: regression
Regressed by: 1863914
Comment 5•1 year ago
|
||
The patch landed in nightly and beta is affected.
:lsalzman, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox130towontfix.
For more information, please visit BugBot documentation.
Flags: needinfo?(lsalzman)
| Assignee | ||
Comment 6•1 year ago
|
||
This seems low volume enough that for now we will let this ride the trains unless crash reports suddenly spike.
Flags: needinfo?(lsalzman)
Updated•1 year ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•