Bug 1913773 - Ensure mCurrentShmem is valid. r=aosmond

Differential Revision: https://phabricator.services.mozilla.com/D219832